fix realtime sync
fix musicvideo letter nodes
fix shutdown procedure
add slideshow
fix websocket connection timeout (part 2)
enable permanent ssl verification
disable ssl verification for artwork cache
lock windowchange on regular ops
optimize code
fix multiserver sync issue
add additional lock for multithreaded syncs
simplify code and improvements
fix artwork
sync performance improvements


6.0.13 (beta)
=============
Improvements:
-------------
sync 
event queue 
player
library nodes
Music libraries
multiselection for 3d and native content
file io changed api 

Fixes:
------
multipart iso
recently added
watched status
add user to session
TV-Show pooling
Trailers
timestamp issue <1970 (Windows only)
musicvideo track info
trakt issues
warning notification when websocket connection is offline
db lockup

New:
----
multiserver support
multivideo selection for native mode
mixed native/addon content support
Audiobook support
iptvsimple sync support
compatibility mode
multiselection bluray iso files
toggle playlist
local trailers support
mixed content libs -> added music support
podcasts sync support
partial sync for homevideos

Known issues:
-------------
probably sync issue on active recordings
some translations pending

Feature requests:
-----------------
none

Details:
--------
sync performance
event performance
multiserver support
menu restructure
player improvements
multivideo selection in native mode
mixed native/addon content supported
multipart iso fixed
recently added fixed
pluginmenu fixed
watched status fixed
add user to session fixed
favorites fixed
delete option fixed
multipart videos fixed
nodes changes (custom skin node updates are required, if library names have spaces in the label)
sleepmode issue fixed
dynamic librearies: Added folder node
Audiobook support (dynamic and synced)
Music db, multiple fixes and massive sync performance improvements (music db still needs additional testing)
bugfixes for transcoding
TV-Show pooling
Fix artwork issues