@@ -55,6 +55,7 @@ class CommonDatabase:
         elif KodiMediaType in ("tvshow", "movie"):
             ArtMapping = {
                 'Thumb': "landscape",
+                'Thumb': "thumb",
                 'Primary': 'poster',
                 'Banner': "banner",
                 'Logo': "clearlogo",
@@ -82,6 +83,11 @@ class CommonDatabase:
                 'Backdrop': "fanart"
             }
 
+        # Primary as fallback for empty thumb
+        if 'Thumb' in ArtworkEmby and 'Primary' in ArtworkEmby:
+            if not ArtworkEmby['Thumb'] and ArtworkEmby['Primary']:
+                ArtworkEmby['Thumb'] = ArtworkEmby['Primary']
+
         for ArtKey, ArtValue in ArtMapping.items():
             if ArtKey == 'Backdrop':
                 if 'Backdrop' in ArtworkEmby:
@@ -101,12 +107,6 @@ class CommonDatabase:
                 if ArtKey in ArtworkEmby:
                     if ArtworkEmby[ArtKey]:
                         self.update_artwork(ArtworkEmby[ArtKey], KodiId, KodiMediaType, ArtValue)
-
-                        # Primary as fallback for empty thumb
-                        if 'Thumb' in ArtMapping and 'Primary' in ArtworkEmby:
-                            if not ArtworkEmby['Thumb'] and ArtworkEmby['Primary']:
-                                self.update_artwork(ArtworkEmby['Primary'], KodiId, KodiMediaType, "thumb")
-
                         continue
 
                 self.cursor.execute("DELETE FROM art WHERE media_id = ? AND media_type = ? AND type = ?", (KodiId, KodiMediaType, ArtValue))
